--- a/.github/workflows/rpi_aarch64_image_builder.yml
+++ b/.github/workflows/rpi_aarch64_image_builder.yml
@@ -19,7 +19,7 @@ jobs:
       # DEFAULT_LOCALE: en_US.UTF-8
       # TIMEZONE: Europe/Paris
       # KEYMAP: us-acentos
-      SSH_PUB_KEY: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKMidTQ6KGfZtonNKd1HtNPPDiPtzEmlg5yOduvmZzTA valerius laptop
+      SSH_PUB_KEY: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAINGTQwX2w0p+XCjwZ+Ezh9RjZ4Sg94enCiYZoIJpmsFA @magomedg Strategic Zone
       # PACKAGES: arp-scan base-devel dosfstools git mkinitcpio-utils neovim nftables openssh python qrencode rsync sudo tailscale uboot-tools unzip zerotier-one zsh
     runs-on: self-hosted
     environment: main
